objects/Cloud_ETL_Reconciliation__c.object
<CustomObject>
    <description>ETL writes data from its reconciliation process to these records for reporting data to Cloud Billing Users</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Name of the Account</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Short description of the type of activity these records represent.</description>
        <label>Activity Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_File_Count__c</fullName>
        <description>Number of Files for this Account/Activity Type actually received in the month period</description>
        <inlineHelpText>Number of Files for this Account/Activity Type actually received in the month period</inlineHelpText>
        <label>Actual File Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSV_ETL_Duration_Match__c</fullName>
        <description>CSV History Table Matches  ETL Summary total duration</description>
        <formula>IF(CSV_Total_Duration__c == ETL_Total_Duration__c,
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Yes&quot;),
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CSV_ETL_Total_Duration_Match</inlineHelpText>
        <label>CSV ETL Duration Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSV_Max_Count__c</fullName>
        <description>MAX value for the CSV files</description>
        <inlineHelpText>MAX value for the CSV files</inlineHelpText>
        <label>CSV Max Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSV_Number_Of_Rows__c</fullName>
        <description>Number of Rows received in CSV files for this Account/Activity Type</description>
        <inlineHelpText>Number of Rows received in CSV files for this Account/Activity Type</inlineHelpText>
        <label>CSV Number Of Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSV_Total_Duration__c</fullName>
        <description>CSV Raw TotalDuration in Seconds for this Account/Activity Type</description>
        <inlineHelpText>CSV Raw TotalDuration in Seconds for this Account/Activity Type</inlineHelpText>
        <label>CSV Total Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Delivered_Late__c</fullName>
        <formula>Last_File_Delivered_Date__c - Period_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Delivered Late</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>Short description of the direction of the activity</description>
        <label>Direction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETL_CSV_Row_Count_Match__c</fullName>
        <description>Compares the Number Of Rows and ETL_Total_Count fields</description>
        <formula>IF(CSV_Number_Of_Rows__c == ETL_CSV_Row_Count__c,
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Yes&quot;),
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compares the Number Of Rows and ETL_Total_Count fields</inlineHelpText>
        <label>ETL CSV Row Count Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETL_CSV_Row_Count__c</fullName>
        <description>Total Number of CSV Records Loaded into ETL for this Account/Activity Type. Should match Number_Of_Rows.</description>
        <inlineHelpText>Total Number of CSV Records Loaded into ETL for this Account/Activity Type. Should match Number_Of_Rows.</inlineHelpText>
        <label>ETL CSV Row Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETL_Max_Count__c</fullName>
        <description>The Mas Count for all Summary Records for the month period. Useful in checking things like Port Usage, Agent Seats, etc.</description>
        <inlineHelpText>The Max Count for all Summary Records for the month period. Useful in checking things like Port Usage, Agent Seats, etc.</inlineHelpText>
        <label>ETL Max Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETL_Record_Status__c</fullName>
        <description>Reconciliation Status on the Rolled Up Record</description>
        <label>ETL Record Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETL_Summary_Aggregated_Row_Count__c</fullName>
        <description>Number of Summary Aggregated  rows for this Account/Activity Type. This is the number of RUUD records sent to SFDC.</description>
        <inlineHelpText>Number of Summary Aggregated  rows for this Account/Activity Type. This is the number of RUUD records sent to SFDC.</inlineHelpText>
        <label>ETL Summary Aggregated Row Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETL_Total_Duration__c</fullName>
        <description>Total Duration rolled up into the ETL Summary Records and SFDC RUUD Records for this Account/Activity Type. Should Match CSV Total Duration.</description>
        <inlineHelpText>Total Duration rolled up into the ETL Summary Records and SFDC RUUD Records for this Account/Activity Type. Should Match CSV Total Duration.</inlineHelpText>
        <label>ETL Total Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETL_and_SFDC_Summary_Rows_Match__c</fullName>
        <description>Compares the SFDC RUUD Count and ETL Summary Aggregated Row Count fields</description>
        <formula>IF(SFDC_RUUD_Count__c == ETL_Summary_Aggregated_Row_Count__c,
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Yes&quot;),
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compares the SFDC RUUD Count and ETL Summary Aggregated Row Count fields</inlineHelpText>
        <label>ETL and SFDC Summary Rows Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_File_Count__c</fullName>
        <description>Number of CSV files we expect to receive for this Account/Activity Type during the month period</description>
        <inlineHelpText>Number of CSV files we expect to receive for this Account/Activity Type during the month period</inlineHelpText>
        <label>Expected File Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Count_Match_Checkbox__c</fullName>
        <formula>Expected_File_Count__c =  Actual_File_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Count Match Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Count_Match__c</fullName>
        <description>Whether Expected File Count and Actual File Count match</description>
        <formula>IF(Expected_File_Count__c == Actual_File_Count__c,
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Yes&quot;),
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether Expected File Count and Actual File Count match</inlineHelpText>
        <label>File Count Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Delivery_Method__c</fullName>
        <description>Billing: Indicator of how fiels are delivered to ETL/SFDC for this Platform Id</description>
        <inlineHelpText>Billing: Indicator of how fiels are delivered to ETL/SFDC for this Platform Id</inlineHelpText>
        <label>File Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GARN_Account_Code__c</fullName>
        <description>GARN Number for this Account</description>
        <label>GARN Account Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_File_Delivered_Date__c</fullName>
        <description>Billing: Field for ETL team to populate. Every time time a new file is added for this month/platform id, write the date of receipt here</description>
        <inlineHelpText>Billing: Field for ETL team to populate. Every time time a new file is added for this month/platform id, write the date of receipt here</inlineHelpText>
        <label>Last File Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Month of the Activity</description>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Rows__c</fullName>
        <description>Number of Rows received in CSV files for this Account/Activity Type</description>
        <inlineHelpText>Number of Rows received in CSV files for this Account/Activity Type</inlineHelpText>
        <label>Number Of Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <description>Billing: End date of the billing period for this reconciliation record</description>
        <inlineHelpText>Billing: End date of the billing period for this reconciliation record</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date__c</fullName>
        <description>Billing: The start date to the day of this record&apos;s billing period</description>
        <inlineHelpText>Billing: The start date to the day of this record&apos;s billing period</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Platform_Id__c</fullName>
        <description>The Account ID for this record</description>
        <inlineHelpText>The Account ID for this record</inlineHelpText>
        <label>Platform Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rated_Durations_Match__c</fullName>
        <description>Compares the SFDC RUUD Total Duration and SFDC SU Total Duration fields</description>
        <formula>IF(SFDC_RUUD_Total_Duration__c ==  SFDC_SU_Total_Duration__c,
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Yes&quot;),
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compares the SFDC RUUD Total Duration and SFDC SU Total Duration fields</inlineHelpText>
        <label>Rated Durations Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Expected_Files__c</fullName>
        <description>Compares the Expected File Count and Actual File Count fields</description>
        <formula>IF(Expected_File_Count__c == Actual_File_Count__c,
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Yes&quot;),
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compares the Expected File Count and Actual File Count fields</inlineHelpText>
        <label>Received Expected Files</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Durations_Match_Checkbox__c</fullName>
        <formula>ETL_Total_Duration__c = SFDC_RUUD_Total_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Durations Match Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Durations_Match__c</fullName>
        <description>Compares the ETL Total Duration and SFDC RUUD Total Duration fields</description>
        <formula>IF(ETL_Total_Duration__c == SFDC_RUUD_Total_Duration__c, 
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Yes&quot;),
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compares the ETL Total Duration and SFDC RUUD Total Duration fields</inlineHelpText>
        <label>SFDC Durations Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_RUUD_Count__c</fullName>
        <description>Total Number of RUUD Records sent to SFDC. Should match ETL Summary Row Count.</description>
        <inlineHelpText>Total Number of RUUD Records sent to SFDC. Should match ETL Summary Row Count.</inlineHelpText>
        <label>SFDC RUUD Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_RUUD_Total_Duration__c</fullName>
        <description>Sum of Total Duration from the Rolled Up Usage Data Object. Should Match ETL Total Duration.</description>
        <inlineHelpText>Sum of Total Duration from the Rolled Up Usage Data Object. Should Match ETL Total Duration.</inlineHelpText>
        <label>SFDC RUUD Total Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_RUUD_Unrated_Count__c</fullName>
        <description>Count of Rolled Up Usage Data records not rated.</description>
        <inlineHelpText>Count of Rolled Up Usage Data records not rated.</inlineHelpText>
        <label>SFDC RUUD Unrated Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_SU_Count__c</fullName>
        <description>The Number of Service Usage Rows rated for this company/activity type. Should match SFDC RUUD Count</description>
        <inlineHelpText>The Number of Service Usage Rows rated for this company/activity type. Should match SFDC RUUD Count</inlineHelpText>
        <label>SFDC SU Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_SU_Total_Duration__c</fullName>
        <description>The Total Duration of Service Usage Rows rated for this company/activity type. Should match SFDC RUUD Total Duration</description>
        <inlineHelpText>The Total Duration of Service Usage Rows rated for this company/activity type. Should match SFDC RUUD Total Duration</inlineHelpText>
        <label>SFDC SU Total Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <description>Billing: Source System Identifier</description>
        <inlineHelpText>Billing: Source System Identifier</inlineHelpText>
        <label>Source Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Set_Name__c</fullName>
        <description>Billing: Name of the Tier Set driving this reconciliation record</description>
        <inlineHelpText>Billing: Name of the Tier Set driving this reconciliation record</inlineHelpText>
        <label>Tier Set Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year of the Activity</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Billing ETL Reconciliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_Id__c</columns>
        <columns>Actual_File_Count__c</columns>
        <columns>CSV_ETL_Duration_Match__c</columns>
        <columns>CSV_Max_Count__c</columns>
        <columns>ETL_Max_Count__c</columns>
        <columns>CSV_Number_Of_Rows__c</columns>
        <columns>CSV_Total_Duration__c</columns>
        <columns>SFDC_RUUD_Count__c</columns>
        <columns>SFDC_RUUD_Total_Duration__c</columns>
        <columns>SFDC_RUUD_Unrated_Count__c</columns>
        <columns>SFDC_SU_Count__c</columns>
        <columns>SFDC_SU_Total_Duration__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reports</fullName>
        <columns>CSV_Total_Duration__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Unique_Id__c</field>
            <operation>contains</operation>
            <value>#11#</value>
        </filters>
        <label>Reports</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SFDC_RUUD_to_SU</fullName>
        <columns>NAME</columns>
        <columns>Platform_Id__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Unique_Id__c</columns>
        <columns>ETL_and_SFDC_Summary_Rows_Match__c</columns>
        <columns>ETL_Summary_Aggregated_Row_Count__c</columns>
        <columns>SFDC_RUUD_Count__c</columns>
        <columns>SFDC_SU_Count__c</columns>
        <columns>ETL_Total_Duration__c</columns>
        <columns>SFDC_RUUD_Total_Duration__c</columns>
        <columns>Rated_Durations_Match__c</columns>
        <columns>SFDC_SU_Total_Duration__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Month__c</field>
            <operation>equals</operation>
            <value>12</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>SFDC RUUD to SU 2016 12 DDI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Voice</fullName>
        <columns>CSV_Total_Duration__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSV_Total_Duration__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Voice</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Billing ETL Reconciliation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing ETL Reconciliation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>